syntax = "proto3";

package Common.Proto.Fight;
import "Base/NetVector3.proto";

message SkillInfo {
    int32 id = 1;
}

enum SkillCastResult {
    SUCCESS = 0;        // 成功
    NOT_CAST = 1;       // 不可释放技能
    TARGET_INVAILD = 2; // 无效目标
    ENTITY_DEAD = 3;    // 实体已死亡
    OUT_OF_RANGE = 4;   // 超出范围
    MP_LACK = 5;        // MP不足
    RUNNING = 6;        // 进行中
    COLLDOWN = 7;       // 冷却中
}

message SkillCastInfo {
    int32 caster_id = 1;
    int32 skill_id = 2;
    int32 target_id = 3;
    Base.NetVector3 target_pos = 4;
}

message SpellRequest {
    SkillCastInfo cast_info = 1;
}

message SpellFailResponse {
    int32 caster_id = 1;
    int32 skill_id = 2;
    SkillCastResult reason = 3;
}

message SpellResponse {
    repeated SkillCastInfo cast_info_arr = 1;
}